// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SignMessage > Sign with Wallet > should render (lg) 1`] = `
<DocumentFragment>
  <div
    class="css-w3nefz"
  >
    <div
      class="css-sdeely"
      data-testid="NavigationBarMobile"
    >
      <div
        class="border-t border-theme-secondary-300 dark:border-theme-secondary-900"
        data-testid="NavigationBar__buttons-separator"
      />
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 cursor-not-allowed text-theme-secondary-500"
          data-testid="NavigationBar__buttons__mobile--receive"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="received"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
          type="vertical"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-theme-secondary-700 dark:text-theme-secondary-600"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                fill="none"
                viewBox="0 0 21 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.35 8.153a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zm0 10.797a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zM16.147 8.153a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zm0 10.797a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
          type="vertical"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 cursor-not-allowed text-theme-secondary-500"
          data-testid="NavigationBar__buttons__mobile--send"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sent"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="css-1jzy9qi"
    >
      <div
        class="relative flex h-14 sm:h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1i1c5eg"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="chevron-left-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-6 sm:px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-2 flex h-8 w-8 cursor-pointer items-center justify-center rounded bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 sm:mr-4 sm:h-11 sm:w-11 sm:rounded-xl"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  fill="none"
                  height="28"
                  viewBox="0 0 363 363"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_434_4442)"
                  >
                    <path
                      d="M174.182 352.325a279.256 279.256 0 0 1-25.627-20.536c-8.518-7.525-17.006-15.66-25.229-24.178a470.15 470.15 0 0 1-29.234-33.315 449.417 449.417 0 0 1-57.68-93.623 420.933 420.933 0 0 1-22.044-60.102A416.702 416.702 0 0 1 1.126 51.749c-.512-4.803-.303-10.73 5.9-13.842a393.077 393.077 0 0 1 54.42-19.94 459.697 459.697 0 0 1 52.646-12.195A374.409 374.409 0 0 1 176.15.333h11.6a374.406 374.406 0 0 1 62.057 5.44 459.723 459.723 0 0 1 52.646 12.195 393.328 393.328 0 0 1 54.422 19.939c6.203 3.115 6.41 9.034 5.898 13.842a416.672 416.672 0 0 1-13.242 68.822 421.133 421.133 0 0 1-22.044 60.102 449.395 449.395 0 0 1-57.68 93.623 470 470 0 0 1-29.234 33.315c-8.223 8.518-16.711 16.653-25.229 24.178a279.73 279.73 0 0 1-25.627 20.536 17.811 17.811 0 0 1-15.528 0h-.007zm6.769-230.087c-.412.547-28.363 29.571-48.772 50.764-7.035 7.318-13.229 13.736-17.187 17.853a49.345 49.345 0 0 0-14.37 29.355 42.981 42.981 0 0 0 2.034 17.531 59.295 59.295 0 0 0 10.41 18.547 369.34 369.34 0 0 0 42.811 44.915 223.324 223.324 0 0 0 20.072 16.051 13.364 13.364 0 0 0 12.005 0 223.333 223.333 0 0 0 20.07-16.051 369.191 369.191 0 0 0 42.811-44.915 59.297 59.297 0 0 0 10.411-18.547 42.98 42.98 0 0 0 2.033-17.531 49.34 49.34 0 0 0-14.377-29.358l-14.811-15.385-1.779-1.848c-20.66-21.451-48.955-50.832-49.371-51.383a1.179 1.179 0 0 0-.995-.548 1.184 1.184 0 0 0-.995.548v.002zm1.408-69.483c.136.215.321.505.582.869.391.544 6.257 9.93 14.382 22.92 19.488 31.162 52.102 83.315 60.679 96.014 6.342 9.377 14.353 14.77 21.974 14.772 7.402 0 18.108-5.031 27.079-29.067a332.382 332.382 0 0 0 19.124-81.095c.409-3.84.243-8.568-4.713-11.056a314.32 314.32 0 0 0-43.468-15.926 367.237 367.237 0 0 0-42.052-9.743 299.13 299.13 0 0 0-49.568-4.345h-8.871a299.13 299.13 0 0 0-49.568 4.345 367.225 367.225 0 0 0-42.051 9.743 314.427 314.427 0 0 0-43.469 15.926c-4.951 2.486-5.12 7.213-4.712 11.056a332.313 332.313 0 0 0 19.124 81.095c4.952 13.265 13.67 29.067 27.078 29.067 7.624 0 15.63-5.384 21.974-14.772 8.57-12.687 41.169-64.811 60.643-95.955l.032-.053c8.124-12.993 13.995-22.38 14.384-22.921.259-.364.455-.657.58-.87.209-.327.311-.491.416-.491.105 0 .214.16.421.487zm-55.455 149.533l19.652-20.614h69.159l19.649 20.614h-108.46zm34.197-35.377l20.162-20.871 20.159 20.871h-40.321z"
                      fill="currentColor"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="ml-4 mr-auto hidden h-14 space-x-8 sm:h-21 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/contacts"
                title="Contacts"
              >
                Contacts
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/votes"
                title="Votes"
              >
                Votes
              </a>
            </li>
          </ul>
          <div
            class="ml-2 mr-auto flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              aria-expanded="false"
              aria-haspopup="dialog"
              data-testid="dropdown__toggle"
            >
              <button
                class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                type="button"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    viewBox="0 0 20 20"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 15.5h18M1 10h18M1 4.5h18"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="group css-c93wvv"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
                    data-testid="NavigationBar__buttons--server-status"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 20 15"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.595 6.285c.618-3.372 3.654-5.664 6.932-5.233 3.279.43 5.67 3.435 5.46 6.86-.21 3.426-2.948 6.092-6.252 6.088H4.912c-1.606.003-3.05-1.017-3.64-2.569-.589-1.552-.203-3.32.972-4.457a3.795 3.795 0 0 1 4.35-.69zm0 0C6.5 7 6.6 7.8 7 9"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                      <div
                        class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                      >
                        <div
                          class="h-2 w-2 rounded-full bg-theme-success-700"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="group css-c93wvv"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
                    data-testid="NavigationBar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          id="bell"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                            />
                          </g>
                        </svg>
                      </div>
                      <div
                        class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                      >
                        <div
                          class="h-2 w-2 rounded-full bg-theme-danger-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-c93wvv"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700"
                    data-testid="NavigationBar__buttons--receive"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          id="received"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-c93wvv"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700"
                    data-testid="NavigationBar__buttons--send"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          id="sent"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="mx-4 my-auto hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 px-8 py-2.5 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <div
              class="relative cursor-pointer items-center justify-center rounded-full align-middle"
              data-testid="UserMenu"
            >
              <div
                class="shrink-0 css-1n9jllj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="Profile Avatar"
                    src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="45" cx="80" cy="30" fill="rgb(76, 175, 80)"/><circle r="55" cx="0" cy="60" fill="rgb(255, 152, 0)"/><circle r="40" cx="50" cy="50" fill="rgb(3, 169, 244)"/></svg>"
                  />
                  <span
                    class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                  >
                    JO
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="w-full py-4 first:pt-8 last:pb-8 flex-1 css-9mualq"
      >
        <div
          class="mx-auto px-6 lg:container md:px-10"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="SignMessage"
          >
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <div>
                  <section
                    class="space-y-4"
                  >
                    <div
                      class="w-full sm:mt-8"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="css-tgbw37"
                        >
                          Sign Message
                        </span>
                        <ul
                          class="css-xa5o6q"
                        >
                          <li
                            class="css-11vjikd"
                          />
                          <li
                            class="css-1ckw8yn"
                          />
                        </ul>
                      </div>
                      <div
                        class="flex flex-col justify-between sm:flex-row"
                      >
                        <div
                          class="flex items-end justify-between bg-theme-background mt-8 hidden sm:block"
                        >
                          <div
                            class="space-y-2"
                          >
                            <div
                              class="flex items-center gap-3"
                            >
                              <div
                                class="css-h1kfx5"
                                data-testid="icon-SendTransactionLight"
                                height="24"
                                width="24"
                              >
                                <svg
                                  fill="none"
                                  viewBox="0 0 24 25"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    clip-path="url(#clip0_13879_104416)"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M18.8821 8.94457H13.7264C13.0146 8.94457 12.4375 8.3675 12.4375 7.65565V2.5"
                                      fill="#E6EFF9"
                                      fill-rule="evenodd"
                                    />
                                    <path
                                      d="M18.8821 8.94457H13.7264C13.0146 8.94457 12.4375 8.3675 12.4375 7.65565V2.5"
                                      stroke="#235B95"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    />
                                    <path
                                      d="M7.99174 21.8337H3.41391C2.70207 21.8337 2.125 21.2566 2.125 20.5448V3.78891C2.125 3.07707 2.70207 2.5 3.41391 2.5H12.5472C12.8891 2.49985 13.217 2.63554 13.4588 2.87722L18.5037 7.92289C18.7451 8.16452 18.8808 8.49212 18.8809 8.83372"
                                      stroke="#235B95"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    />
                                    <path
                                      clip-rule="evenodd"
                                      d="M9.02802 17.1926C8.71518 17.1043 8.49639 16.8225 8.4885 16.4975C8.48061 16.1725 8.68545 15.8804 8.99364 15.7771L18.994 12.5155C19.1276 12.472 19.2743 12.5069 19.3739 12.606C19.4735 12.7051 19.5092 12.8516 19.4664 12.9854L16.2073 22.9907C16.1044 23.2995 15.812 23.5049 15.4867 23.4968C15.1613 23.4888 14.8793 23.2693 14.7918 22.9559L13.6727 18.3067L9.02802 17.1926Z"
                                      fill="#E6EFF9"
                                      fill-rule="evenodd"
                                      stroke="#235B95"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    />
                                  </g>
                                  <defs>
                                    <clippath
                                      id="clip0_13879_104416"
                                    >
                                      <rect
                                        fill="white"
                                        height="24"
                                        transform="translate(24 24.5) rotate(-180)"
                                        width="24"
                                      />
                                    </clippath>
                                  </defs>
                                </svg>
                              </div>
                              <h1
                                class="mb-0 text-2xl leading-[29px]"
                                data-testid="header__title"
                              >
                                Sign Message
                              </h1>
                            </div>
                            <div
                              class="flex items-center leading-5 text-theme-secondary-text"
                              data-testid="header__subtitle"
                            >
                              Provide a message below and sign with your mnemonic passphrase.
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="flex min-w-0 flex-col css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="signatory-address"
                      >
                        Signing Wallet
                      </label>
                      <button
                        class="relative w-full rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 cursor-default"
                        data-testid="SelectAddress__wrapper"
                        disabled=""
                        type="button"
                      >
                        <span
                          class="absolute inset-y-0 left-14 flex items-center border border-transparent right-4 left-4"
                        >
                          <div
                            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                          >
                            <span
                              class="no-ligatures min-w-0 overflow-hidden text-sm sm:text-base text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr
                            </span>
                          </div>
                        </span>
                        <div
                          class="css-4lfin5"
                          disabled=""
                        >
                          <div
                            class="relative flex h-full flex-1 invisible"
                          >
                            <input
                              autocomplete="off"
                              class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base text-theme-secondary-text css-1937ogs"
                              data-testid="SelectAddress__input"
                              disabled=""
                              name="signatory-address"
                              readonly=""
                              type="text"
                              value="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                            />
                          </div>
                        </div>
                      </button>
                    </fieldset>
                    <fieldset
                      class="flex min-w-0 flex-col css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="message"
                      >
                        Message
                      </label>
                      <div
                        class="css-14zfvme"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                            data-testid="SignMessage__message-input"
                            name="message"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <span
                              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                              data-testid="InputCounter__counter"
                            >
                              0/255
                            </span>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                  </section>
                  <div
                    class="mt-4"
                  >
                    <div
                      class="space-y-4"
                      data-testid="AuthenticationStep"
                    >
                      <fieldset
                        class="flex min-w-0 flex-col css-1bcidjh"
                      >
                        <label
                          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                          data-testid="FormLabel"
                          for="mnemonic"
                        >
                          Mnemonic
                        </label>
                        <div
                          class="css-14zfvme"
                        >
                          <div
                            class="relative flex h-full flex-1"
                          >
                            <input
                              autocomplete="off"
                              class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                              data-testid="AuthenticationStep__mnemonic"
                              name="mnemonic"
                              type="password"
                              value=""
                            />
                          </div>
                          <div
                            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                            data-testid="Input__addon-end"
                          >
                            <div
                              class=""
                            >
                              <button
                                class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                                data-ring-focus-margin="-m-1"
                                data-testid="InputPassword__toggle"
                                type="button"
                              >
                                <div
                                  class="css-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg
                                    id="eye"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                                      />
                                      <path
                                        d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </button>
                            </div>
                          </div>
                        </div>
                      </fieldset>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-145pihz"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-700"
                  data-testid="SignMessage__back-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
                  data-testid="SignMessage__continue-button"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Sign
                  </div>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SignMessage > Sign with Wallet > should render (xs) 1`] = `
<DocumentFragment>
  <div
    class="css-w3nefz"
  >
    <div
      class="css-sdeely"
      data-testid="NavigationBarMobile"
    >
      <div
        class="border-t border-theme-secondary-300 dark:border-theme-secondary-900"
        data-testid="NavigationBar__buttons-separator"
      />
      <div
        class="flex h-14 items-center justify-center space-x-4"
      >
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 cursor-not-allowed text-theme-secondary-500"
          data-testid="NavigationBar__buttons__mobile--receive"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="received"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                >
                  <path
                    d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
          type="vertical"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none text-theme-secondary-700 dark:text-theme-secondary-600"
          data-testid="NavigationBar__buttons__mobile--home"
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                fill="none"
                viewBox="0 0 21 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  clip-rule="evenodd"
                  d="M5.35 8.153a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zm0 10.797a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zM16.147 8.153a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2zm0 10.797a3.6 3.6 0 1 0 0-7.2 3.6 3.6 0 0 0 0 7.2z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
        <div
          class="border-theme-secondary-300 dark:border-theme-secondary-800 css-3y8nng"
          type="vertical"
        />
        <button
          class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 cursor-not-allowed text-theme-secondary-500"
          data-testid="NavigationBar__buttons__mobile--send"
          disabled=""
          type="button"
        >
          <div
            class="flex items-center space-x-2"
          >
            <div
              class="css-1i4b0eq"
              height="20"
              width="20"
            >
              <svg
                id="sent"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </button>
      </div>
    </div>
    <nav
      aria-labelledby="main menu"
      class="css-1jzy9qi"
    >
      <div
        class="relative flex h-14 sm:h-21"
      >
        <div
          class="hidden w-12 sm:flex"
        >
          <button
            class="css-1i1c5eg"
          >
            <div
              class="mx-auto css-15txs7d"
              height="10"
              width="10"
            >
              <svg
                id="chevron-left-small"
                viewBox="0 0 10 10"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <path
                  d="M6.938 9l-3.8-3.8c-.1-.1-.1-.3 0-.4l3.8-3.8"
                  fill="none"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="flex flex-1 items-center px-6 sm:px-8"
        >
          <div
            class="my-auto flex items-center"
          >
            <button
              class="my-auto mr-2 flex h-8 w-8 cursor-pointer items-center justify-center rounded bg-theme-primary-600 text-white outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 sm:mr-4 sm:h-11 sm:w-11 sm:rounded-xl"
              data-testid="NavigationBarLogo--button"
              type="button"
            >
              <span
                class="relative"
              >
                <svg
                  fill="none"
                  height="22"
                  viewBox="0 0 363 363"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    clip-path="url(#clip0_434_4442)"
                  >
                    <path
                      d="M174.182 352.325a279.256 279.256 0 0 1-25.627-20.536c-8.518-7.525-17.006-15.66-25.229-24.178a470.15 470.15 0 0 1-29.234-33.315 449.417 449.417 0 0 1-57.68-93.623 420.933 420.933 0 0 1-22.044-60.102A416.702 416.702 0 0 1 1.126 51.749c-.512-4.803-.303-10.73 5.9-13.842a393.077 393.077 0 0 1 54.42-19.94 459.697 459.697 0 0 1 52.646-12.195A374.409 374.409 0 0 1 176.15.333h11.6a374.406 374.406 0 0 1 62.057 5.44 459.723 459.723 0 0 1 52.646 12.195 393.328 393.328 0 0 1 54.422 19.939c6.203 3.115 6.41 9.034 5.898 13.842a416.672 416.672 0 0 1-13.242 68.822 421.133 421.133 0 0 1-22.044 60.102 449.395 449.395 0 0 1-57.68 93.623 470 470 0 0 1-29.234 33.315c-8.223 8.518-16.711 16.653-25.229 24.178a279.73 279.73 0 0 1-25.627 20.536 17.811 17.811 0 0 1-15.528 0h-.007zm6.769-230.087c-.412.547-28.363 29.571-48.772 50.764-7.035 7.318-13.229 13.736-17.187 17.853a49.345 49.345 0 0 0-14.37 29.355 42.981 42.981 0 0 0 2.034 17.531 59.295 59.295 0 0 0 10.41 18.547 369.34 369.34 0 0 0 42.811 44.915 223.324 223.324 0 0 0 20.072 16.051 13.364 13.364 0 0 0 12.005 0 223.333 223.333 0 0 0 20.07-16.051 369.191 369.191 0 0 0 42.811-44.915 59.297 59.297 0 0 0 10.411-18.547 42.98 42.98 0 0 0 2.033-17.531 49.34 49.34 0 0 0-14.377-29.358l-14.811-15.385-1.779-1.848c-20.66-21.451-48.955-50.832-49.371-51.383a1.179 1.179 0 0 0-.995-.548 1.184 1.184 0 0 0-.995.548v.002zm1.408-69.483c.136.215.321.505.582.869.391.544 6.257 9.93 14.382 22.92 19.488 31.162 52.102 83.315 60.679 96.014 6.342 9.377 14.353 14.77 21.974 14.772 7.402 0 18.108-5.031 27.079-29.067a332.382 332.382 0 0 0 19.124-81.095c.409-3.84.243-8.568-4.713-11.056a314.32 314.32 0 0 0-43.468-15.926 367.237 367.237 0 0 0-42.052-9.743 299.13 299.13 0 0 0-49.568-4.345h-8.871a299.13 299.13 0 0 0-49.568 4.345 367.225 367.225 0 0 0-42.051 9.743 314.427 314.427 0 0 0-43.469 15.926c-4.951 2.486-5.12 7.213-4.712 11.056a332.313 332.313 0 0 0 19.124 81.095c4.952 13.265 13.67 29.067 27.078 29.067 7.624 0 15.63-5.384 21.974-14.772 8.57-12.687 41.169-64.811 60.643-95.955l.032-.053c8.124-12.993 13.995-22.38 14.384-22.921.259-.364.455-.657.58-.87.209-.327.311-.491.416-.491.105 0 .214.16.421.487zm-55.455 149.533l19.652-20.614h69.159l19.649 20.614h-108.46zm34.197-35.377l20.162-20.871 20.159 20.871h-40.321z"
                      fill="currentColor"
                    />
                  </g>
                </svg>
              </span>
            </button>
          </div>
          <ul
            class="ml-4 mr-auto hidden h-14 space-x-8 sm:h-21 lg:flex"
            data-testid="NavigationBar__menu"
          >
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/dashboard"
                title="Portfolio"
              >
                Portfolio
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/exchange"
                title="Exchange"
              >
                Exchange
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/contacts"
                title="Contacts"
              >
                Contacts
              </a>
            </li>
            <li
              class="flex"
            >
              <a
                class="text-md ring-focus relative flex items-center font-semibold text-theme-secondary-text transition-colors duration-200 focus:outline-none"
                data-ring-focus-margin="-mx-2"
                href="#/profiles/b999d134-7a24-481e-a95d-bc47c543bfc9/votes"
                title="Votes"
              >
                Votes
              </a>
            </li>
          </ul>
          <div
            class="ml-2 mr-auto flex content-center items-center lg:hidden"
            data-testid="NavigationBar__menu-toggle"
          >
            <div
              aria-expanded="false"
              aria-haspopup="dialog"
              data-testid="dropdown__toggle"
            >
              <button
                class="cursor-pointer rounded p-2 focus:outline-none focus:ring-2 focus:ring-theme-primary-400"
                type="button"
              >
                <div
                  class="css-1i4b0eq"
                  height="20"
                  width="20"
                >
                  <svg
                    viewBox="0 0 20 20"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M1 15.5h18M1 10h18M1 4.5h18"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
          <div
            class="mr-4 flex items-center space-x-2 sm:space-x-4"
          >
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="group css-c93wvv"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
                    data-testid="NavigationBar__buttons--server-status"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          fill="none"
                          viewBox="0 0 20 15"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.595 6.285c.618-3.372 3.654-5.664 6.932-5.233 3.279.43 5.67 3.435 5.46 6.86-.21 3.426-2.948 6.092-6.252 6.088H4.912c-1.606.003-3.05-1.017-3.64-2.569-.589-1.552-.203-3.32.972-4.457a3.795 3.795 0 0 1 4.35-.69zm0 0C6.5 7 6.6 7.8 7 9"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                      <div
                        class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                      >
                        <div
                          class="h-2 w-2 rounded-full bg-theme-success-700"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div>
              <div
                aria-expanded="false"
                aria-haspopup="dialog"
                data-testid="dropdown__toggle"
              >
                <div
                  class="group css-c93wvv"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded border-none"
                    data-testid="NavigationBar__buttons--notifications"
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          id="bell"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M8.4 17.8c.3.9 1.2 1.4 2.1 1.1.5-.2 1-.6 1.1-1.1M10 2.8V1M10 2.8c3.3 0 6 2.7 6 6h0c0 5.6 1.2 6.6 1.2 6.6H2.8S4 13.9 4 8.8c0-3.3 2.7-6 6-6z"
                            />
                          </g>
                        </svg>
                      </div>
                      <div
                        class="absolute right-1 top-1 flex items-center justify-center rounded-full bg-theme-background p-1 transition-all duration-100 ease-linear group-hover:bg-theme-primary-100 dark:group-hover:bg-theme-secondary-800"
                      >
                        <div
                          class="h-2 w-2 rounded-full bg-theme-danger-500"
                        />
                      </div>
                    </div>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <div
              class="hidden items-center space-x-4 sm:flex"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="css-c93wvv"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700"
                    data-testid="NavigationBar__buttons--receive"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          id="received"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <g
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          >
                            <path
                              d="M8 5V1M12 1v10h3.404c.248 0 .39.281.244.481l-5.41 7.398a.296.296 0 0 1-.476 0l-5.41-7.398A.303.303 0 0 1 4.596 11H8V9"
                            />
                          </g>
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
              <div
                class="flex items-center"
              >
                <div
                  class="css-c93wvv"
                >
                  <button
                    class="p-3 relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700"
                    data-testid="NavigationBar__buttons--send"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="flex items-center space-x-2"
                    >
                      <div
                        class="p-1 css-1i4b0eq"
                        height="20"
                        width="20"
                      >
                        <svg
                          id="sent"
                          viewBox="0 0 20 20"
                          x="0"
                          xml:space="preserve"
                          xmlns="http://www.w3.org/2000/svg"
                          y="0"
                        >
                          <path
                            d="M8 19v-4m0-4V9H4.596a.303.303 0 0 1-.244-.481l5.41-7.398a.296.296 0 0 1 .476 0l5.41 7.398c.146.2.004.481-.244.481H12v10"
                            fill="none"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                          />
                        </svg>
                      </div>
                    </div>
                  </button>
                </div>
              </div>
              <div
                class="h-8 border-r border-theme-secondary-300 dark:border-theme-secondary-800"
              />
            </div>
          </div>
          <div
            class="mx-4 my-auto hidden items-center md:flex"
            data-testid="NavigationBar__balance"
          >
            <div
              class="flex flex-row items-center justify-center space-x-2 bg-theme-secondary-100 px-8 py-2.5 dark:bg-black md:m-0 md:flex-col md:items-start md:justify-start md:space-x-0 md:bg-transparent md:p-0 md:text-right md:dark:bg-transparent"
            >
              <div
                class="whitespace-nowrap text-theme-secondary-700 dark:text-theme-secondary-500 md:text-xs md:font-semibold md:text-theme-secondary-500"
              >
                Your Balance
              </div>
              <div
                class="font-semibold text-theme-secondary-900 dark:text-theme-secondary-200 md:text-theme-secondary-text md:dark:text-theme-text"
                data-testid="Balance__value"
              >
                <span
                  class="whitespace-nowrap"
                  data-testid="Amount"
                >
                  0 BTC
                </span>
              </div>
            </div>
          </div>
          <div
            aria-expanded="false"
            aria-haspopup="dialog"
            data-testid="dropdown__toggle"
          >
            <div
              class="relative cursor-pointer items-center justify-center rounded-full align-middle"
              data-testid="UserMenu"
            >
              <div
                class="shrink-0 css-1ha4taj"
                data-testid="Avatar"
              >
                <div
                  class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="Profile Avatar"
                    src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="45" cx="80" cy="30" fill="rgb(76, 175, 80)"/><circle r="55" cx="0" cy="60" fill="rgb(255, 152, 0)"/><circle r="40" cx="50" cy="50" fill="rgb(3, 169, 244)"/></svg>"
                  />
                  <span
                    class="absolute text-sm font-semibold text-theme-background dark:text-theme-text"
                  >
                    JO
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
    <div
      class="flex flex-1 flex-col"
    >
      <div
        class="w-full py-4 first:pt-8 last:pb-8 flex-1 css-9mualq"
      >
        <div
          class="mx-auto px-6 lg:container md:px-10"
        >
          <form
            class="mx-auto max-w-xl"
            data-testid="SignMessage"
          >
            <div>
              <div
                data-testid="tab-pabel__active-panel"
              >
                <div>
                  <section
                    class="space-y-4"
                  >
                    <div
                      class="w-full sm:mt-8"
                    >
                      <div
                        class="flex flex-col"
                      >
                        <span
                          class="css-tgbw37"
                        >
                          Sign Message
                        </span>
                        <ul
                          class="css-xa5o6q"
                        >
                          <li
                            class="css-11vjikd"
                          />
                          <li
                            class="css-1ckw8yn"
                          />
                        </ul>
                      </div>
                      <div
                        class="flex flex-col justify-between sm:flex-row"
                      >
                        <div
                          class="flex items-end justify-between bg-theme-background mt-8 hidden sm:block"
                        >
                          <div
                            class="space-y-2"
                          >
                            <div
                              class="flex items-center gap-3"
                            >
                              <div
                                class="css-h1kfx5"
                                data-testid="icon-SendTransactionLight"
                                height="24"
                                width="24"
                              >
                                <svg
                                  fill="none"
                                  viewBox="0 0 24 25"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    clip-path="url(#clip0_13879_104416)"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M18.8821 8.94457H13.7264C13.0146 8.94457 12.4375 8.3675 12.4375 7.65565V2.5"
                                      fill="#E6EFF9"
                                      fill-rule="evenodd"
                                    />
                                    <path
                                      d="M18.8821 8.94457H13.7264C13.0146 8.94457 12.4375 8.3675 12.4375 7.65565V2.5"
                                      stroke="#235B95"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    />
                                    <path
                                      d="M7.99174 21.8337H3.41391C2.70207 21.8337 2.125 21.2566 2.125 20.5448V3.78891C2.125 3.07707 2.70207 2.5 3.41391 2.5H12.5472C12.8891 2.49985 13.217 2.63554 13.4588 2.87722L18.5037 7.92289C18.7451 8.16452 18.8808 8.49212 18.8809 8.83372"
                                      stroke="#235B95"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    />
                                    <path
                                      clip-rule="evenodd"
                                      d="M9.02802 17.1926C8.71518 17.1043 8.49639 16.8225 8.4885 16.4975C8.48061 16.1725 8.68545 15.8804 8.99364 15.7771L18.994 12.5155C19.1276 12.472 19.2743 12.5069 19.3739 12.606C19.4735 12.7051 19.5092 12.8516 19.4664 12.9854L16.2073 22.9907C16.1044 23.2995 15.812 23.5049 15.4867 23.4968C15.1613 23.4888 14.8793 23.2693 14.7918 22.9559L13.6727 18.3067L9.02802 17.1926Z"
                                      fill="#E6EFF9"
                                      fill-rule="evenodd"
                                      stroke="#235B95"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    />
                                  </g>
                                  <defs>
                                    <clippath
                                      id="clip0_13879_104416"
                                    >
                                      <rect
                                        fill="white"
                                        height="24"
                                        transform="translate(24 24.5) rotate(-180)"
                                        width="24"
                                      />
                                    </clippath>
                                  </defs>
                                </svg>
                              </div>
                              <h1
                                class="mb-0 text-2xl leading-[29px]"
                                data-testid="header__title"
                              >
                                Sign Message
                              </h1>
                            </div>
                            <div
                              class="flex items-center leading-5 text-theme-secondary-text"
                              data-testid="header__subtitle"
                            >
                              Provide a message below and sign with your mnemonic passphrase.
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <fieldset
                      class="flex min-w-0 flex-col css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="signatory-address"
                      >
                        Signing Wallet
                      </label>
                      <button
                        class="relative w-full rounded focus:outline-none focus:ring-2 focus:ring-theme-primary-400 cursor-default"
                        data-testid="SelectAddress__wrapper"
                        disabled=""
                        type="button"
                      >
                        <span
                          class="absolute inset-y-0 left-14 flex items-center border border-transparent right-4 left-4"
                        >
                          <div
                            class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                          >
                            <span
                              class="no-ligatures min-w-0 overflow-hidden text-sm sm:text-base text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                              data-testid="Address__address"
                            >
                              DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr
                            </span>
                          </div>
                        </span>
                        <div
                          class="css-4lfin5"
                          disabled=""
                        >
                          <div
                            class="relative flex h-full flex-1 invisible"
                          >
                            <input
                              autocomplete="off"
                              class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base text-theme-secondary-text css-1937ogs"
                              data-testid="SelectAddress__input"
                              disabled=""
                              name="signatory-address"
                              readonly=""
                              type="text"
                              value="DABCrsfEqhtdzmBrE2AU5NNmdUFCGXKEkr"
                            />
                          </div>
                        </div>
                      </button>
                    </fieldset>
                    <fieldset
                      class="flex min-w-0 flex-col css-1bcidjh"
                    >
                      <label
                        class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                        data-testid="FormLabel"
                        for="message"
                      >
                        Message
                      </label>
                      <div
                        class="css-14zfvme"
                      >
                        <div
                          class="relative flex h-full flex-1"
                        >
                          <input
                            autocomplete="off"
                            class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                            data-testid="SignMessage__message-input"
                            name="message"
                            type="text"
                            value=""
                          />
                        </div>
                        <div
                          class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                          data-testid="Input__addon-end"
                        >
                          <div
                            class=""
                          >
                            <span
                              class="text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
                              data-testid="InputCounter__counter"
                            >
                              0/255
                            </span>
                          </div>
                        </div>
                      </div>
                    </fieldset>
                  </section>
                  <div
                    class="mt-4"
                  >
                    <div
                      class="space-y-4"
                      data-testid="AuthenticationStep"
                    >
                      <fieldset
                        class="flex min-w-0 flex-col css-1bcidjh"
                      >
                        <label
                          class="FormLabel mb-2 flex text-sm font-semibold leading-[17px] text-theme-secondary-text transition-colors duration-100"
                          data-testid="FormLabel"
                          for="mnemonic"
                        >
                          Mnemonic
                        </label>
                        <div
                          class="css-14zfvme"
                        >
                          <div
                            class="relative flex h-full flex-1"
                          >
                            <input
                              autocomplete="off"
                              class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                              data-testid="AuthenticationStep__mnemonic"
                              name="mnemonic"
                              type="password"
                              value=""
                            />
                          </div>
                          <div
                            class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
                            data-testid="Input__addon-end"
                          >
                            <div
                              class=""
                            >
                              <button
                                class="ring-focus relative flex h-full w-full items-center justify-center text-2xl focus:outline-none"
                                data-ring-focus-margin="-m-1"
                                data-testid="InputPassword__toggle"
                                type="button"
                              >
                                <div
                                  class="css-1i4b0eq"
                                  height="20"
                                  width="20"
                                >
                                  <svg
                                    id="eye"
                                    viewBox="0 0 20 20"
                                    x="0"
                                    xml:space="preserve"
                                    xmlns="http://www.w3.org/2000/svg"
                                    y="0"
                                  >
                                    <g
                                      fill="none"
                                      stroke="currentColor"
                                      stroke-linecap="round"
                                      stroke-linejoin="round"
                                      stroke-width="2"
                                    >
                                      <path
                                        d="M10 4.6c-3.2-.1-6.5 2.2-8.6 4.5-.5.5-.5 1.3 0 1.8 2 2.3 5.4 4.6 8.6 4.5 3.3-.1 6.5-2.3 8.6-4.5.5-.5.5-1.3 0-1.8-2.1-2.3-5.4-4.6-8.6-4.5z"
                                      />
                                      <path
                                        d="M13 10c0 1.7-1.3 3-3 3s-3-1.3-3-3 1.3-3 3-3c1.2 0 3 .7 3 3z"
                                      />
                                    </g>
                                  </svg>
                                </div>
                              </button>
                            </div>
                          </div>
                        </div>
                      </fieldset>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="css-145pihz"
              >
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded dark:bg-theme-secondary-800 dark:text-theme-secondary-200 bg-theme-primary-100 text-theme-primary-600 hover:bg-theme-primary-700 hover:text-white dark:hover:bg-theme-primary-700"
                  data-testid="SignMessage__back-button"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Back
                  </div>
                </button>
                <button
                  class="px-5 py-3 space-x-3 text-base relative items-center inline-flex justify-center font-semibold leading-tight text-center transition-colors-shadow duration-100 ease-linear outline-none focus:outline-none focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed rounded disabled:bg-theme-secondary-200 disabled:text-theme-secondary-400 dark:disabled:bg-theme-secondary-800 dark:disabled:text-theme-secondary-700"
                  data-testid="SignMessage__continue-button"
                  disabled=""
                  type="submit"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Sign
                  </div>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
